Bug 480167 - I don't want to be friends
Summary: I don't want to be friends
Status: RESOLVED FIXED
Alias: None
Product: NeoChat
Classification: Applications
Component: General (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Tobias Fella
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-22 12:57 UTC by Nicolas Fella
Modified: 2025-10-19 17:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Fella 2024-01-22 12:57:25 UTC
Neochat refers to the direct messages sections as "friends". However not everyone I'm communicating with via Matrix is necessarily my friend. It could be coworkers, random people online, my mother, mortal enemies, Nate Graham, spammers, etc.

Neochat should use a neutral term for those chats
Comment 1 Bug Janitor Service 2024-01-22 17:34:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1540
Comment 2 Bug Janitor Service 2024-10-05 17:02:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/1933
Comment 3 Carl Schwan 2024-10-21 01:00:09 UTC
Git commit 634cefc694de88c0aac18665bcfd4f8a72cb0907 by Carl Schwan.
Committed on 20/10/2024 at 23:33.
Pushed by carlschwan into branch 'master'.

Simplify appstream summary

- matrix -> Matrix
- Remove "with your friends" as NeoChat is not only about chatting with
  your friend

M  +1    -1    org.kde.neochat.appdata.xml

https://invent.kde.org/network/neochat/-/commit/634cefc694de88c0aac18665bcfd4f8a72cb0907
Comment 4 Justin Zobel 2025-02-11 02:12:52 UTC
The assigned MR didn't remove other references to friends, only the appstream data, so have moved it back to CONFIRMED.
Comment 5 Bug Janitor Service 2025-10-16 10:24:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/neochat/-/merge_requests/2509
Comment 6 Nicolas Fella 2025-10-19 17:51:36 UTC
Git commit 6d56b673c4876afebd02d09b9742354b0e74bce8 by Nicolas Fella.
Committed on 19/10/2025 at 17:42.
Pushed by nicolasfella into branch 'master'.

Don't call direct messages friends

Not every person I communicate with is necessarily my friend

Use a more neutral term

M  +2    -2    src/app/qml/GlobalMenu.qml
M  +2    -2    src/app/qml/UserSearchPage.qml
M  +2    -2    src/libneochat/enums/neochatroomtype.h
M  +2    -2    src/rooms/SpaceDrawer.qml

https://invent.kde.org/network/neochat/-/commit/6d56b673c4876afebd02d09b9742354b0e74bce8