Don't call direct messages friends

Not every person I communicate with is necessarily my friend

Use a more neutral term

BUG: 480167